syntax="proto3";

option go_package = "./proto";

package grpc_service ;

service GrpcService{
    
    rpc SayHello(NoParam) returns (HelloResponse);  // unary
    
    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse); //server side streaming

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList); //client side streaming 

    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse); //bidirectional streaming 

}

message NoParam{};

message HelloRequest{

    string Name =1;
}

message NamesList{

    repeated string names = 1;

}

message MessagesList{

    repeated string messages = 1; 
}

message HelloResponse{

    string message = 1;

}
